change week 1 challenge screenshot; add 2 practice websites; minor changes to text and styling

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 
   <div class="container-fluid projects" id="Work">
     <h2 class="sectionHeading">Work</h2>
+    <p style="text-align: center";>A short journey from complete novice onwards</p>
     <div class="row Work">
       <!-- Card 1 -->
       <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
@@ -65,7 +66,7 @@
          <img src="./Images/Pre-work Study Guide.png" class="card-img-top" alt="Screenshot of pre-work study guide">
         <div class="card-body">
           <h5 class="card-title">Pre-work project</h5>
-          <p class="card-text">Pre-work gave students an introduction to html, CSS, github and JavaScript 
+          <p class="card-text">Pre-work gave students an introduction to HTML, CSS, GitHub and JavaScript 
               and was tested by the creation of a brief study guide 
               looking like the screenshot above
           </p>
@@ -79,7 +80,7 @@
       <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
         <div class="card">
  <!--Replace with placeholder or proper image and update text and alt-->
-          <img src="https://placehold.co/600x300/orange/white" class="card-img-top" alt="Placeholder image orange background white text">
+          <img src="./Images/screenshot_week_1_challenge.jpg" class="card-img-top" alt="Digital marketing meeting">
           <div class="card-body">
            <h5 class="card-title">Week 1 Challenge</h5>
            <p class="card-text">Week 1 Challenge was to test our understanding of html and CSS with a refactoring task</p>
@@ -103,7 +104,35 @@
       </div>
       <!-- End card 3 -->
 
-      <!-- Card 4 -->
+      <!-- Card 4 Practice website 1 -->
+      <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+        <div class="card">
+<!--Replace with placeholder or proper image and update text and alt-->          
+          <img src="./Images/practicewebsite1.png" class="card-img-top" alt="Screenshot of first practice website">
+            <div class="card-body">
+              <h5 class="card-title">Practice website 1</h5>
+              <p class="card-text">The Bootcamp had one week off and I needed to revise</p>
+              <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/practicewebsite">Go to site</a>
+            </div>
+        </div>
+      </div>
+      <!-- End card 4 -->
+
+      <!-- Card 5 Practice website 2 -->
+      <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+        <div class="card">
+<!--Replace with placeholder or proper image and update text and alt-->          
+          <img src="./Images/practicewebsite2.png" class="card-img-top" alt="Screenshot of second practice website">
+            <div class="card-body">
+              <h5 class="card-title">Practice website 2</h5>
+              <p class="card-text">What better way than to write up your notes in websites?!</p>
+              <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/practicewebsiteweek2">Go to site</a>
+            </div>
+        </div>
+      </div>
+      <!-- End card 5 -->
+
+      <!-- Card 6 -->
       <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
         <div class="card">
 <!--Replace with placeholder or proper image and update text and alt-->          
@@ -115,9 +144,9 @@
             </div>
         </div>
       </div>
-      <!-- End card 4 -->
+      <!-- End card 6 -->
 
-      <!-- Card 5 -->
+      <!-- Card 7 -->
       <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
         <div class="card">
 <!--Replace with placeholder or proper image and update text and alt-->          
@@ -129,9 +158,9 @@
             </div>
         </div>
       </div>
-      <!-- End card 5 -->
+      <!-- End card 7 -->
 
-      <!-- Card 6 -->
+      <!-- Card 8 -->
       <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
         <div class="card">
 <!--Replace with placeholder or proper image and update text and alt-->          
@@ -143,9 +172,9 @@
             </div>
         </div>
       </div>
-      <!-- End card 6 -->
+      <!-- End card 8 -->
 
-      <!-- Card 7 -->
+      <!-- Card 9 -->
       <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
         <div class="card">
 <!--Replace with placeholder or proper image and update text and alt-->          
@@ -157,9 +186,9 @@
             </div>
         </div>
       </div>
-      <!-- End card 7 -->
+      <!-- End card 9 -->
 
-      <!-- Card 8 -->
+      <!-- Card 10 -->
       <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
         <div class="card">
 <!--Replace with placeholder or proper image and update text and alt-->          
@@ -171,9 +200,9 @@
             </div>
         </div>
       </div>
-      <!-- End card 8 -->
+      <!-- End card 10 -->
 
-      <!-- Card 9 -->
+      <!-- Card 11 -->
       <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
         <div class="card">
 <!--Replace with placeholder or proper image and update text and alt-->          
@@ -185,9 +214,9 @@
             </div>
         </div>
       </div>
-      <!-- End card 9 -->
+      <!-- End card 11 -->
 
-      <!-- Card 10 -->
+      <!-- Card 12 -->
       <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
         <div class="card">
 <!--Replace with placeholder or proper image and update text and alt-->          
@@ -199,9 +228,9 @@
             </div>
         </div>
       </div>
-      <!-- End card 10 -->
+      <!-- End card 12 -->
 
-      <!-- Card 11 -->
+      <!-- Card 13 -->
       <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
         <div class="card">
 <!--Replace with placeholder or proper image and update text and alt-->          
@@ -213,9 +242,9 @@
             </div>
         </div>
       </div>
-      <!-- End card 11 -->
+      <!-- End card 13 -->
 
-      <!-- Card 12 -->
+      <!-- Card 14 -->
       <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
         <div class="card">
 <!--Replace with placeholder or proper image and update text and alt-->          
@@ -227,7 +256,7 @@
             </div>
         </div>
       </div>
-      <!-- End card 12 -->
+      <!-- End card 14 -->
     </div>
   </div>
   <!-- End cards -->
