replace photo with cropped version, update link to GitHub, make Contact bar full width

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <!-- End navigation bar -->
 
   <!-- Jumbotron -->
-  <div class="jumbotron" id="Background">
+  <div class="jumbotron">
     <h3 class="display-6">Philip Culling</h3>
     <div class="jumboCopy">
       <p class="lead">
@@ -50,12 +50,12 @@
       </p>
     </div>
     <div>
-     <img src="Images/Phil photo.jpg"alt="Phil photo">
+     <img src="./Images/Phil photo cropped.jpg"alt="Phil photo">
     </div>
   </div>
   <!-- End jumbotron -->
 
-  <div class="container-fluid projects" id="Work">
+  <div class="container-fluid projects">
     <h2 class="sectionHeading">Work</h2>
     <p style="text-align: center";>A short journey from complete novice onwards</p>
     <div class="row Work">
@@ -302,7 +302,7 @@
         philculling@hotmail.com
         </li>
         <li>
-        <a target="_blank" href="https://github.com/">Link to Phil's GitHub site</a>
+        <a target="_blank" href="https://github.com/philculling">Link to Phil's GitHub site</a>
         </li>
       </ul>
     </div>
