update text in skills section

--- a/index.html
+++ b/index.html
@@ -262,22 +262,22 @@
   <!-- End cards -->
 
   <div class="container-fluid content skills">
-    <h2 class="sectionHeading" id="Skills">Skills to be developed</h2>
+    <h2 class="sectionHeading" id="Skills">Skills studied</h2>
     <!-- Row 1 -->
     <div class="row valueProp">
       <div class="sideAccent">
       </div>
       <div class="col-8">
         <ul class="list-left">
-          <li>html</li>
-          <li>CSS</li>
+          <li>HTML5</li>
+          <li>CSS3</li>
           <li>Bootstrap</li>
           <li>JavaScript</li>
-          <li>git</li>
-          <li>github</li>
+          <li>Git</li>
+          <li>GitHub</li>
         </ul>
         <ul class="list-right">
-          <li>UX design principles</li>
+          <li>UX/UI design principles</li>
           <li>jQuery</li>
           <li>React</li>
           <li>RESTful-compliant network requests</li>
